# kitten-wars-cli-hs

./: README.md  kitten-wars-cli-hs.cabal  stack.yaml
src/: Main.hs  Protocol.hs
tests/: Tests.hs
