name:                kitten-wars-cli-hs
version:             0.1.0.0
synopsis:            Haskell client for kitten-wars
description:         Please see README.md
homepage:            https://github.com/githubuser/kitten-wars-cli-hs#readme
license-file:        LICENSE
author:              Kevin King Sancho
maintainer:          kevinks.et@gmail.com
copyright:           2016 Kevin King Sancho
category:            Web, Game
build-type:          Simple
cabal-version:       >=1.10

executable kitten-wars-cli-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       text
                     , websockets
                     , network
                     , transformers
                     , aeson
                     , bytestring
                     , base >= 4.7 && < 5

library
        exposed-modules:    Main
        ghc-options:        -Wall -fwarn-tabs
        hs-source-dirs:     src
        default-language:   Haskell2010
        build-depends:      text
                          , websockets
                          , network
                          , transformers
                          , aeson
                          , bytestring
                          , HUnit
                          , base >= 4.7 && <5


Test-Suite test-send-actions
        type:               detailed-0.9
        test-module:        Tests
        hs-source-dirs:     tests
        default-language:   Haskell2010
        build-depends:      base >= 4.7 && <5
                          , Cabal